# my_logger

./: .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cmake.yml
include/: my_logger.h
src/: destroy.c  init.c  log.c  main.c
src/utility/: my_fputstr.c  my_strcpy.c  my_strdup.c  my_strlen.c
tests/: test_destroy.c  test_init.c  test_log.c  test_my_fputstr.c  test_my_stdcpy.c  test_my_strdup.c  test_my_strlen.c
